--- a/config/_default/hugo.toml
+++ b/config/_default/hugo.toml
@@ -1,6 +1,7 @@
 # set `baseurl` to your root domain
 # if you set it to "/" share icons won't work properly on production
-baseurl = "https://example.com/" # Include trailing slash
+#baseurl = "https://example.com/" # Include trailing slash
+baseurl = "https://abarhub.github.io/blogprog/"
 # title = "Clarity"  # Edit directly from config/_default/languages.toml # alternatively, uncomment this and remove `title` entry from the aforemention file.
 copyright = "Copyright © 2008–2018, Steve Francia and the Hugo Authors; all rights reserved."
 # canonifyurls = true
